# fahimlab_api

./: .env.example  .gitignore  PROMPT.md  README.md  compose.yaml  conftest.py  justfile  main.py  pyproject.toml
.github/workflows/: test.yml
apps/blog/: models.py
apps/blog/migrations/: 0001_initial.py
apps/blog/templates/blog/: home_page.html
apps/core/: tests.py
config/: api.py  settings.py  urls.py
docs/: 01-overview.md  02-architecture.md  03-database.md  04-api.md  05-storage.md  06-security.md  07-deployment.md  08-admin.md  09-task-workflow.md  10-testing.md  11-wagtail-api.md  12-cicd.md  README.md
scripts/: run_tests.py
tests/: __init__.py
tests/blog/: __init__.py  test_api.py
