[project]
name = "fahimlab-api"
version = "0.1.0"
description = "Fahim Laboratory API"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
    "django-cors-headers>=4.6.0",
    "django-environ>=0.13.0",
    "psycopg[binary]>=3.3.3",
    "wagtail>=7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
